[package]
name = "gcp-docker-auth"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
build = "build.rs"

[build-dependencies]
glob = "0.2.11"
serde_codegen = "0.8"

[dependencies]
atty = "0.2"
base64 = "0.2"
env_logger = "0.3"
hyper = "0.9"
openssl = "0.7"
log = "0.3"
rust-crypto = "0.2"
serde = "0.8"
serde_json = "0.8"
unix_socket = "0.5.0"
